[project]
name = "influxdb-mcp-server"
version = "0.1.0"
description = "Read-only MCP server for InfluxDB 2.x and InfluxDB Cloud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27,<2",
    "influxdb-client[ciso]>=1.49,<2",
    "pydantic>=2.8,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]

[project.scripts]
influxdb-mcp-server = "influxdb_mcp_server.__main__:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
